Table users {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  avatar varchar(255) [default: 'default.png']
  banner varchar(255)
  country varchar(50)
  about text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table channels {
  id int [pk, increment]
  user_id int [not null]
  name varchar(100) [not null]
  description text
  banner_url varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  subscribers_count int [default: 0]
  total_views int [default: 0]
  total_videos int [default: 0]

  Indexes {
    (user_id)
  }
}

Table videos {
  id int [pk, increment]
  channel_id int [not null]
  title varchar(150) [not null]
  description text
  youtube_id varchar(20) [not null]
  thumbnail_url varchar(255)
  duration int [not null]                  // segundos
  resolution varchar(10) [default: '1080p']
  category_id int
  views int [default: 0]
  is_private boolean [default: false]
  scheduled_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (channel_id)
    (category_id)
  }
}

Table categories {
  id int [pk, increment]
  name varchar(50) [unique, not null]
}

Table tags {
  id int [pk, increment]
  name varchar(50) [unique, not null]
}

Table video_tags {
  id int [pk, increment]
  video_id int [not null]
  tag_id int [not null]

  Indexes {
    unique (video_id, tag_id)
  }
}

Table shorts {
  id int [pk, increment]
  channel_id int [not null]
  youtube_id varchar(20) [not null]
  title varchar(120)
  duration int [not null]  // < 60 sec
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table stories {
  id int [pk, increment]
  channel_id int [not null]
  media_url varchar(255) [not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table subscriptions {
  id int [pk, increment]
  user_id int [not null]
  channel_id int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    unique (user_id, channel_id)
  }
}

Table likes {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  type varchar(10) [not null] // like/dislike
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id)
    (video_id)
    (short_id)
  }
}

Table comments {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  parent_id int           // respuestas
  content text [not null]
  likes int [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table history {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  last_watched_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table playlists {
  id int [pk, increment]
  user_id int [not null]
  title varchar(150) [not null]
  is_private boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table playlist_videos {
  id int [pk, increment]
  playlist_id int [not null]
  video_id int [not null]
  position int [not null, default: 0]

  Indexes {
    unique (playlist_id, video_id)
  }
}

Table reports {
  id int [pk, increment]
  reporter_id int [not null]
  target_user_id int
  video_id int
  comment_id int
  reason text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table notifications {
  id int [pk, increment]
  user_id int [not null]
  type varchar(50) [not null]   // new_comment, new_subscriber, new_video...
  message text [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table analytics {
  id int [pk, increment]
  video_id int [not null]
  views int [default: 0]
  likes int [default: 0]
  dislikes int [default: 0]
  comments int [default: 0]
  date date [not null]
}

Table ads {
  id int [pk, increment]
  advertiser varchar(100) [not null]
  media_url varchar(255) [not null]
  target_category_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table ad_impressions {
  id int [pk, increment]
  ad_id int [not null]
  user_id int
  video_id int
  watched_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: channels.user_id > users.id
Ref: videos.channel_id > channels.id
Ref: video_tags.video_id > videos.id
Ref: video_tags.tag_id > tags.id
Ref: shorts.channel_id > channels.id
Ref: stories.channel_id > channels.id
Ref: subscriptions.user_id > users.id
Ref: subscriptions.channel_id > channels.id
Ref: likes.user_id > users.id
Ref: likes.video_id > videos.id
Ref: likes.short_id > shorts.id
Ref: comments.user_id > users.id
Ref: comments.video_id > videos.id
Ref: comments.short_id > shorts.id
Ref: comments.parent_id > comments.id
Ref: history.user_id > users.id
Ref: history.video_id > videos.id
Ref: history.short_id > shorts.id
Ref: playlists.user_id > users.id
Ref: playlist_videos.playlist_id > playlists.id
Ref: playlist_videos.video_id > videos.id
Ref: reports.reporter_id > users.id
Ref: reports.target_user_id > users.id
Ref: reports.video_id > videos.id
Ref: reports.comment_id > comments.id
Ref: notifications.user_id > users.id
Ref: analytics.video_id > videos.id
Ref: ads.target_category_id > categories.id
Ref: ad_impressions.ad_id > ads.id
Ref: ad_impressions.user_id > users.id
Ref: ad_impressions.video_id > videos.id

// https://dbdiagram.io/d/view-tube-db-691b972a6735e1117041b655
